--- a/index.html
+++ b/index.html
@@ -62,5 +62,19 @@
         <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="wind"></div>
         <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="wind"></div>
     </div>
+
+    <div class="parent">
+        <div class="div1">1</div>
+        <div class="WeatherPerHour"></div>
+        <div class="div3">
+            <div class="box"><span id="temp">18</span>°</div>
+            <div class="box"><span id="dateTemp">13:08</span></div>
+            <div class="box">Humidity (%) : <span id="hum">72</span></div>
+            <div class="box">Wind (km/h) : <span id="vent">44</span></div>
+            <div class="box">Cloud Cover (%) : <span id="nuage">90</span></div>
+        </div>
+        <div class="div4">4</div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
