logique de site

--- a/index.html
+++ b/index.html
@@ -4,67 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="clear-night" id="clear-night">
-        <div class="stars" id="stars1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
     </div>
     <div class="snowy" id="snowy">
-        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="snow" id="snow1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow5"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\snow.gif" alt="rain"></div>
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="snow" id="snow1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
     </div>
     <div class="partly-cloudy" id="partly-cloudy">
-        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\sun.png" alt="sun"></div>
-        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\birds.gif" alt="birds"></div>
+        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
     </div>
     <div class="cloudy">
-        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\wind.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\wind.gif" alt="wind"></div>
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
     </div>
     <div class="sunny">
-        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\sun.png" alt="sun"></div>
-        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\birds.gif" alt="birds"></div>
+        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
+        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
     </div>
     <div class="rainy">
-        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\cloud.png" alt="Cloud"></div>
-        <div class="rain" id="rain1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain3"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain4"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain5"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="rain"></div>
-        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Desktop\ProjetDevWeb\img\rain.gif" alt="wind"></div>
-    </div>
-
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="rain" id="rain1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+    </div> 
+    
     <div class="parent">
-        <div class="div1">1</div>
+        <div class="WeatherPerDay"></div>
         <div class="WeatherPerHour"></div>
         <div class="div3">
             <div class="box"><span id="temp">18</span>°</div>
