--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="img\cloud.png" alt="cloud">
     <div class="clear-night" id="clear-night">
         <div class="stars" id="stars1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
         <div class="stars" id="stars2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
