Ajout du choix de localisation et fixation de css et logique de site

--- a/index.html
+++ b/index.html
@@ -7,72 +7,86 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="clear-night" id="clear-night">
-        <div class="stars" id="stars1"><img src="img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars2"><img src="img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars3"><img src="img\stars.gif" alt="stars"></div>
+    <div class="clear-night weather-overlay" id="clear-night">
+        <div class="stars" id="stars1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
     </div>
-    <div class="snowy" id="snowy">
-        <div class="cloud" id="cloud1"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="snow" id="snow1"><img src="img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow2"><img src="img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow3"><img src="img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow4"><img src="img\snow.gif" alt="rain"></div>
-        <div class="snow" id="snow5"><img src="img\snow.gif" alt="rain"></div>
+    <div class="snowy weather-overlay" id="snowy">
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="snow" id="snow1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\snow.gif" alt="rain"></div>
     </div>
-    <div class="partly-cloudy" id="partly-cloudy">
-        <div class="sun" id="sun"><img src="img\sun.png" alt="sun"></div>
-        <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="birds" id="birds1"><img src="img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="img\birds.gif" alt="birds"></div>
+    <div class="partly-cloudy weather-overlay" id="partly-cloudy">
+        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
     </div>
-    <div class="cloudy">
-        <div class="cloud" id="cloud1"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="wind" id="wind1"><img src="img\wind.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="img\wind.gif" alt="wind"></div>
+    <div class="cloudy weather-overlay">
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
     </div>
-    <div class="sunny">
-        <div class="sun" id="sun"><img src="img\sun.png" alt="sun"></div>
-        <div class="birds" id="birds1"><img src="img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="img\birds.gif" alt="birds"></div>
+    <div class="sunny weather-overlay">
+        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
+        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
     </div>
-    <div class="rainy">
-        <div class="cloud" id="cloud1"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud2"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud5"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="cloud" id="cloud6"><img src="img\cloud.png" alt="Cloud"></div>
-        <div class="rain" id="rain1"><img src="img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain2"><img src="img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain3"><img src="img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain4"><img src="img\rain.gif" alt="rain"></div>
-        <div class="rain" id="rain5"><img src="img\rain.gif" alt="rain"></div>
-        <div class="wind" id="wind1"><img src="img\wind.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="img\wind.gif" alt="wind"></div>
+    <div class="rainy weather-overlay">
+        <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+        <div class="rain" id="rain1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="rain" id="rain5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
     </div> 
     
     <div class="parent">
         <div class="WeatherPerDay"></div>
         <div class="WeatherPerHour"></div>
         <div class="div3">
-            <div class="box"><span id="temp">18</span>°</div>
-            <div class="box"><span id="dateTemp">13:08</span></div>
-            <div class="box">Humidity (%) : <span id="hum">72</span></div>
-            <div class="box">Wind (km/h) : <span id="vent">44</span></div>
-            <div class="box">Cloud Cover (%) : <span id="nuage">90</span></div>
+            <div id="loading-text">
+            Loading your location<span class="dots">...</span>
+            </div>
+            <div class="box"><span id="temp"></span></div>
+            <div class="box"><span id="dateTemp"></span></div>
+            <div class="box"><span id="ville"></span></div>
+            <div class="box">Humidity (%) : <span id="hum"></span></div>
+            <div class="box">Wind (km/h) : <span id="vent"></span></div>
+            <div class="box">Cloud Cover (%) : <span id="nuage"></span></div>
         </div>
+
+        <!-- ADD THIS BLOCK HERE (above .div4) -->
+        <div id="location-selector">
+            <input type="text" id="city-input" placeholder="Enter city name (e.g. Paris, Tunis, Tokyo)">
+            <button id="search-city">Search</button>
+            <button id="my-location">My Location</button>
+            <button id="pick-on-map">Pick on Map</button>
+        </div>
+        
+
         <div class="div4">4</div>
     </div>
     <script src="script.js"></script>
