--- a/index.html
+++ b/index.html
@@ -9,49 +9,49 @@
 <body>
     
     <div class="clear-night weather-overlay" id="clear-night">
-        <div class="stars" id="stars1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
-        <div class="stars" id="stars3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars1"><img src="img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars2"><img src="img\stars.gif" alt="stars"></div>
+        <div class="stars" id="stars3"><img src="img\stars.gif" alt="stars"></div>
     </div>
     <div class="cloudy weather-overlay">
         <div class="clouds">
-            <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud1"><img src="img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud2"><img src="img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
+        <div class="cloud" id="cloud5"><img src="img\cloud.png" alt="Cloud"></div>
         </div>
-        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind1"><img src="img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="img\wind.gif" alt="wind"></div>
     </div>
     <div class="sunny weather-overlay">
-        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
-        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="sun" id="sun"><img src="img\sun.png" alt="sun"></div>
+        <div class="birds" id="birds1"><img src="img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="img\birds.gif" alt="birds"></div>
     </div>
     <div class="partly-cloudy weather-overlay" id="partly-cloudy">
-        <div class="sun" id="sun"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\sun.png" alt="sun"></div>
-        <div class="cloud" id="cloud6"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-        <div class="birds" id="birds1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
-        <div class="birds" id="birds2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\birds.gif" alt="birds"></div>
+        <div class="sun" id="sun"><img src="img\sun.png" alt="sun"></div>
+        <div class="cloud" id="cloud6"><img src="img\cloud.png" alt="Cloud"></div>
+        <div class="birds" id="birds1"><img src="img\birds.gif" alt="birds"></div>
+        <div class="birds" id="birds2"><img src="img\birds.gif" alt="birds"></div>
     </div>
     <div class="rainy weather-overlay">
         <div class="clouds">
-            <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
-            <div class="cloud" id="cloud5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud1"><img src="img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud2"><img src="img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud3"><img src="img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud4"><img src="img\cloud.png" alt="Cloud"></div>
+            <div class="cloud" id="cloud5"><img src="img\cloud.png" alt="Cloud"></div>
         </div>
         <div class="rains">
-            <div class="rain" id="rain1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
-            <div class="rain" id="rain2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
-            <div class="rain" id="rain3"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
-            <div class="rain" id="rain4"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
-            <div class="rain" id="rain5"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\rain.gif" alt="rain"></div>
+        <div class="snow" id="snow1"><img src="img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow2"><img src="img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow3"><img src="img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow4"><img src="img\snow.gif" alt="rain"></div>
+        <div class="snow" id="snow5"><img src="img\snow.gif" alt="rain"></div>
         </div>
-        <div class="wind" id="wind1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
-        <div class="wind" id="wind2"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind1"><img src="img\wind.gif" alt="wind"></div>
+        <div class="wind" id="wind2"><img src="img\wind.gif" alt="wind"></div>
     </div>
     <!-- <div class="snowy weather-overlay" id="snowy">
         <div class="cloud" id="cloud1"><img src="C:\Users\Mahdi's Computer\Documents\MI\DevWeb\Projet\img\cloud.png" alt="Cloud"></div>
